--- a/app/views/updates/_form.html.erb
+++ b/app/views/updates/_form.html.erb
@@ -22,6 +22,6 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit class: 'btn btn-primary btn-block' %>
+    <%= f.submit class: 'btn btn-secondary btn-block' %>
   </div>
 <% end %>
